# fc-npo-nlp

./: README.md  pyproject.toml
.trunk/actions/trunk-upgrade-available/: 2023-08-17-05-25-42.762.yaml
fc_npo_nlp/: __init__.py  __main__.py
